// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lazy A larger example renders as expected 1`] = `
<div
  className="relative"
  style={
    Object {
      "height": 850,
    }
  }
>
  <div
    className="flex-parent flex-parent--center-cross flex-parent--center-main absolute top right bottom left bg-darken10 z5 round"
  >
    <div
      className="flex-child loading"
    />
  </div>
</div>
`;

exports[`Lazy Basic renders as expected 1`] = `
<div
  className="relative"
  style={
    Object {
      "height": 30,
    }
  }
>
  <div
    className="flex-parent flex-parent--center-cross flex-parent--center-main absolute top right bottom left bg-darken10 z5 round"
  >
    <div
      className="flex-child loading loading--s"
    />
  </div>
</div>
`;
